--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,3 +88,21 @@ img {
 	0%   {background-color:black;}
 	100%  {background-color:#ea6a5c;}
 }
+
+
+.video-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.video-container video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
