--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,8 +99,10 @@ img {
     overflow: hidden;
 }
 .video-container video {
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
     position: absolute;
     top: 50%;
     left: 50%;
