--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,22 +89,31 @@ img {
 	100%  {background-color:#ea6a5c;}
 }
 
+.videoBg{
+        position:absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 
-.video-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-.video-container video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @media (min-aspect-ratio: 16/9) {
+      .videoBg{
+       
+        width: 100%;
+        height: auto;
+      }
+    }
+    @media (max-aspect-ratio: 16/9) {
+      .videoBg {
+       
+       width:100%; 
+        height: 100%;
+
+        padding:0
+      }
+
+      video{
+  object-fit:fill
+
 }
