--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,30 +90,28 @@ img {
 }
 
 .videoBg{
-        position:absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index:-1;
+}
 
-    @media (min-aspect-ratio: 16/9) {
-      .videoBg{
-       
+@media (min-aspect-ratio: 16/9) {
+      .videoBg{ 
         width: 100%;
         height: auto;
       }
-    }
-    @media (max-aspect-ratio: 16/9) {
+ }
+    
+@media (max-aspect-ratio: 16/9) {
       .videoBg {
-       
-       width:100%; 
+        width:100%; 
         height: 100%;
-
         padding:0
       }
 
-      video{
+video{
   object-fit:cover
-
 }
