--- a/assets/css/main copy.css
+++ b/assets/css/main copy.css
@@ -1,12 +1,4 @@
 body {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-   font-weight: 300;
-   color:white;
-/*	font-family: Helvetica;
-	font-weight:100;
-	font-size:40px;
-	color:white;
-	line-height:44px;*/
 }
 
 a {
@@ -16,44 +8,6 @@ a {
 .background-black {
 	background-color: black;
 }
-
-.bodycopy {
-	margin-top:50px;
-	margin-left:100px;
-	margin-right:80px;
-	font-size:60px;
-	line-height:70px;
-}
-
-.smallbodycopy {
-	margin-top:50px;
-	margin-left:100px;
-	margin-right:100px;
-	font-size:26px;
-	line-height:34px;
-}
-
-/*WAVE HAND ANIMATION STARTS HERE*/
-.wave {
-  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
-  animation-duration: 2.5s;        /* Change to speed up or slow down */
-  animation-iteration-count: infinite;  /* Never stop waving :) */
-  transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
-  display: inline-block;
-}
-
-@keyframes wave-animation {
-    0% { transform: rotate( 0.0deg) }
-   10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
-   20% { transform: rotate(-8.0deg) }
-   30% { transform: rotate(14.0deg) }
-   40% { transform: rotate(-4.0deg) }
-   50% { transform: rotate(10.0deg) }
-   60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
-  100% { transform: rotate( 0.0deg) }
-}
-/*WAVE HAND ANIMATION ENDS HERE*/
-
 
 .width-50 {
 	width:50%;
@@ -80,17 +34,15 @@ img {
 }
 
 .name {
-	/*font-family: bd-retrocentric, sans-serif;
+	font-family: bd-retrocentric, sans-serif;
 	font-weight: 400;
-	font-style: normal;*/
+	font-style: normal;
 /*	-webkit-animation-name:bg;
 	-webkit-animation-duration:1s;
 	animation-iteration-count:infinite;
 	animation-timing-function:linear;
 	animation-direction:alternate;
 	position:fixed;*/
-	font-family: roboto;
-	font-weight: 400;
 	top:0;
 	left:0;
 	color:white;
