--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,11 @@ a {
   animation-iteration-count: infinite;  /* Never stop waving :) */
   transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
   display: inline-block;
+  margin-top:50px;
+	margin-left:100px;
+	margin-right:80px;
+	font-size:60px;
+	line-height:70px;
 }
 
 @keyframes wave-animation {
