--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,11 @@
+* {
+	outline:1px solid red;
+}
+
 body {
 	font-family: helvetica; 
-   font-weight: 300;
-   color:white;
-/*	font-family: Helvetica;
-	font-weight:100;
-	font-size:40px;
-	color:white;
-	line-height:44px;*/
+	font-weight: 100;
+	color:#fff6ed;
 }
 
 a {
@@ -14,24 +13,24 @@ a {
 }
 
 .background-black {
-	background-color: pink;
+	background-color: black;
 }
 
 .bodycopy {
-	margin-top:50px;
+/*	margin-top:50px;
 	margin-left:100px;
-	margin-right:80px;
+	margin-right:80px;*/
 	font-size:60px;
 	line-height:70px;
-	color:white;
+	margin-left:5%;
+	margin-right:5%;
 }
 
 .smallbodycopy {
-	margin-top:50px;
-	margin-left:100px;
-	margin-right:100px;
 	font-size:26px;
 	line-height:34px;
+	margin-left:5%;
+	margin-right:5%;
 }
 
 /*WAVE HAND ANIMATION STARTS HERE*/
@@ -86,20 +85,9 @@ img {
 }
 
 .name {
-	/*font-family: bd-retrocentric, sans-serif;
-	font-weight: 400;
-	font-style: normal;*/
-/*	-webkit-animation-name:bg;
-	-webkit-animation-duration:1s;
-	animation-iteration-count:infinite;
-	animation-timing-function:linear;
-	animation-direction:alternate;
-	position:fixed;*/
-	font-family: roboto;
 	font-weight: 400;
 	top:0;
 	left:0;
-	color:white;
 	z-index:2;
 	padding:30px;
 	font-size:18px;
