--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,17 +22,20 @@ a {
 	margin-right:80px;
 	font-size:60px;
 	line-height:70px;*/
-	font-size: calc(20px + (60 - 20) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(40px + (60 - 40) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	margin-left:5%;
 	margin-right:5%;
 }
 
 .smallbodycopy {
-	font-size:26px;
-	line-height:34px;
+/*	font-size:26px;
+	line-height:34px;*/
+	padding-top:5%;
 	margin-left:5%;
 	margin-right:5%;
+	font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)));
+	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
 
 /*WAVE HAND ANIMATION STARTS HERE*/
@@ -42,11 +45,6 @@ a {
   animation-iteration-count: infinite;  /* Never stop waving :) */
   transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
   display: inline-block;
-  margin-top:50px;
-	margin-left:100px;
-	margin-right:80px;
-	font-size:60px;
-	line-height:70px;
 }
 
 @keyframes wave-animation {
