--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ a {
 .smallbodycopy {
 /*	font-size:26px;
 	line-height:34px;*/
-	padding-top:5%;
+	margin-top:5%;
 	margin-left:5%;
 	margin-right:5%;
 	font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)));
@@ -45,6 +45,11 @@ a {
   animation-iteration-count: infinite;  /* Never stop waving :) */
   transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
   display: inline-block;
+  font-size: calc(40px + (60 - 40) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.wavey {
+	margin-left:40%;
 }
 
 @keyframes wave-animation {
