--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
-/** {
+* {
 	outline:1px solid red;
-}*/
+}
 
 body {
 	font-family: helvetica; 
@@ -56,10 +56,24 @@ a:hover {
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 }
 
+.projectbodycopy {
+/*	font-size:26px;
+	line-height:34px;*/
+	margin-top:15%;
+	margin-left:5%;
+	margin-right:10%;
+	font-size: calc(20px + (26 - 20) * ((100vw - 300px) / (1600 - 300)));
+	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+}
+
 .portfolio-part {
 	margin-left:5%;
 	font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+}
+
+.project-title {
+	color:#56fc03;
 }
 
 .underline {
