--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -64,13 +64,13 @@ a:hover {
 }
 
 .logo {
-	font-size:40px;
 	mix-blend-mode: difference;
 	border:none;
 	color:#84a59d;
 	font-family: degular-display,sans-serif;
 	font-weight: 400;
 	font-style: normal;
+	font-size: calc(16px + (40 - 16) * ((100vw - 300px) / (1600 - 300)));
 }
 /*AS LOGO ENDS HERE*/
 
