--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -125,23 +125,11 @@ a:hover {
 	margin-left:5%;
 }
 
-.pic-1 img {
-	position:absolute;
-	top: 50vh;
-	left: 5vw;
-	width: 455px;
-	height: auto;
-}
+/*.pic-2 {
+	padding-top:20px;
+}*/
 
-.pic-2 img {
-	position:absolute;
-	top: 54vh;
-	left: 35vw;
-	width: 510px;
-	height: auto;
-}
-
-.pic-3 img {
+/*.pic-3 img {
 	position:absolute;
 	top: 60vh;
 	left: 70vw;
@@ -195,7 +183,7 @@ a:hover {
 	left: 46vw;
 	width: 557px;
 	height:auto;
-}
+}*/
 
 
 /*HP PROJECT PIC ENDS HERE*/
