--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -17,7 +17,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 4;
   pointer-events: none;
 }
 
@@ -46,7 +46,6 @@ body {
 a {
 	color:black;
 	text-decoration: none;
-	cursor:pointer;
 }
 
 a:hover {
@@ -123,67 +122,13 @@ a:hover {
 /*HP PROJECT PIC STARTS HERE*/
 .projects {
 	margin-left:5%;
+	z-index:10;
 }
 
-/*.pic-2 {
-	padding-top:20px;
-}*/
-
-/*.pic-3 img {
-	position:absolute;
-	top: 60vh;
-	left: 70vw;
-	width: 557px;
-	height:auto;
+.pic {
+	cursor:pointer;
+	z-index:10;
 }
-
-.pic-4 img {
-	position:absolute;
-	top: 85vh;
-	left: 8vw;
-	width: 557px;
-	height:auto;
-}
-
-.pic-5 img {
-	position:absolute;
-	top: 100vh;
-	left: 50vw;
-	width: 557px;
-	height:auto;
-}
-
-.pic-6 img {
-	position:absolute;
-	top: 130vh;
-	left: 34vw;
-	width: 557px;
-	height:auto;
-}
-
-.pic-7 img {
-	position:absolute;
-	top: 140vh;
-	left: 0vw;
-	width: 557px;
-	height:auto;
-}
-
-.pic-8 img {
-	position:absolute;
-	top: 150vh;
-	left: 66vw;
-	width: 557px;
-	height:auto;
-}
-
-.pic-9 img {
-	position:absolute;
-	top: 180vh;
-	left: 46vw;
-	width: 557px;
-	height:auto;
-}*/
 
 
 /*HP PROJECT PIC ENDS HERE*/
