--- a/assets/css/project-page.css
+++ b/assets/css/project-page.css
@@ -32,6 +32,43 @@
 /*CURSOR ENDS HERE*/
 
 
+/*AS LOGO STARTS HERE*/
+.logo-bar {
+	margin-top:0%;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
+	width:100%;
+	display:flex;
+
+}
+
+.logo {
+	border:none;
+	color:#84a59d;
+	font-family: degular-display,sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: calc(16px + (30 - 16) * ((100vw - 300px) / (1600 - 300)));
+	border-bottom: 1px dotted black;
+	border-radius:25px;
+	padding-bottom:0.5%;
+	padding-top:1%;
+}
+
+.logo-nav {
+	color:black;
+}
+
+.logo-nav:hover {
+	color:black;
+	font-style:none;
+	text-decoration:none;
+	cursor:pointer;
+}
+/*AS LOGO ENDS HERE*/
+
+
 /*MAIN ELEMENTS*/
 body {
 	font-family: helvetica; 
@@ -105,7 +142,7 @@ a:hover {
 	bottom:5%;
 	left:5%;
 	z-index:2;
-	font-size: calc(14px + (36 - 14) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	mix-blend-mode: difference;
 	color:white;
@@ -121,7 +158,7 @@ a:hover {
 	bottom:5%;
 	right:5%;
 	z-index:4;
-	font-size: calc(14px + (36 - 14) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	mix-blend-mode: difference;
 	color:white;
@@ -137,7 +174,7 @@ a:hover {
 	bottom:5%;
 	right:12%;
 	z-index:4;
-	font-size: calc(14px + (36 - 14) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(14px + (30 - 14) * ((100vw - 300px) / (1600 - 300)));
 	line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
 	mix-blend-mode: difference;
 	color:white;
@@ -149,34 +186,7 @@ a:hover {
 }
 /*NAVIGATION*/
 
-/*AS LOGO STARTS HERE*/
-.logo-bar {
-	position: absolute;
-	margin:2%;
-	z-index: 2;
-}
 
-.logo {
-	font-size: calc(16px + (40 - 16) * ((100vw - 300px) / (1600 - 300)));
-	border:none;
-	color:#000000;
-	font-family: degular-display,sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	opacity:50%;
-}
-
-.logo-nav {
-	color:#000000;
-}
-
-.logo-nav:hover {
-	color:#000000;
-	font-style:none;
-	text-decoration:none;
-	cursor:pointer;
-}
-/*AS LOGO ENDS HERE*/
 
 
 img {
